--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                  <a>-</a>
                               </div>
                               <div class="started_text_reserve" align="center" style="width: 570px;">
-                                 <a href="http://10.198.232.192:1220/">Try Our Demo 🔥</a>
+                                 <a href="https://40886b5db30f3bd690.gradio.live/">Try Our Demo 🔥</a>
                               </div>
                               <div class="started_blank" align="center">
                                  <a>-</a>
