--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                  <a>-</a>
                               </div>
                               <div class="started_text_reserve" align="center" style="width: 570px;">
-                                 <a href="https://5e5817509e4724b929.gradio.live/">Try Our Demo 🔥</a>
+                                 <a href="https://73711df9cf5cb630eb.gradio.live">Try Our Demo 🔥</a>
                               </div>
                               <div class="started_blank" align="center">
                                  <a>-</a>
